--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="css/hero.css">
   <link rel="stylesheet" href="footerslider.css">
   <link rel="stylesheet" href="footer.css">
+  <link rel="stylesheet" href="About Us.htm">
 </head>
 <body>
 
@@ -27,7 +28,7 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
+        <li class="active"><a href="index.html">Home</a></li>
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">Products <span class="caret"></span></a>
           <ul class="dropdown-menu">
@@ -36,7 +37,7 @@
             <li><a href="#">Zen Haven</a></li>
           </ul>
         </li>
-        <li><a href="#">About Us</a></li>
+        <li><a href="About Us.htm">About Us</a></li>
         <li><a href="#">Contact Us</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -270,7 +271,7 @@
 </section>
 
 
-
+<!-- FOOTER SECTION -->
 
 <footer class="footer-section">
   <div class="container">
