--- a/index.html
+++ b/index.html
@@ -64,17 +64,13 @@
         <div class="row">
             <div class="col-sm-12">
                 <h1 class="product-of-the-week">
-                    PRODUCT OF THE WEEK
+                    PRODUCTS OF THE WEEK
                 </h1>
             </div>
         </div>
         <div class="row">
             <div class="col-sm-12">
-                <p class="product-of-the-week-caption">"Introducing our Furniture Favorites of the Week! Discover
-                     stunning pieces that will transform your home's ambiance. <br>
-                     From timeless classics to contemporary marvels, we've curated
-                     the best for you. <br>Elevate your living space with this week's 
-                     must-haves!"</p>
+                <p class="product-of-the-week-caption">"DURABLE FURNITURE is the epitome of comfort and style. Its sleek, modern design seamlessly blends with any decor, while its plush cushioning and ergonomic design offer unparalleled relaxation. Crafted from premium materials, this recliner is built to last. With multiple reclining positions and a built-in USB port for convenience, it's the perfect addition to your living space. Elevate your comfort level with the Durable recliner - today's top pick in furniture!"</p>
             </div>
             
         </div>
@@ -83,24 +79,27 @@
             <div class="col-sm-4">
                 <div class="product-card">
                     <div class="new">NEW</div>
-                    <img src="/images/img-2.png" alt="">
-                    <div class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad soluta assumenda error neque nesciunt aperiam a, harum, minima ea explicabo, hic magni consequatur repellendus! Recusandae sequi tempore a neque expedita!</div>
+                    <img src="/images/Product of the week/barling_reclined.jpg" alt="">
+                    <h4>Barling Reclined</h4>
+                    <div class="description" id="barling_reclined">The Barling Recline Chair is a comfortable, tylish,and functional piece of furniture designed to enhance relaxation and comfort in your home. Its adjustable features,smooth mechanisms,and many more. </div><br>
                     <button>view</button>
                 </div>
             </div>
             <div class="col-sm-4">
                 <div class="product-card">
                     <div class="new">NEW</div>
-                    <img src="/images/CoasterComfort/lightHousePendantCoasterComfort.jpg" alt="">
-                    <div class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, aspernatur! Nostrum, a vel perspiciatis quas quasi, consequuntur assumenda, atque nihil dolor cumque accusamus deserunt cupiditate tempore voluptatibus porro sapiente officia.</div>
+                    <img src="/images/Product of the week/Leather-Motion-Recliner.jpg" alt="">
+                    <h4>Motion Reclined</h4>
+                    <div class="description" id="Motion-recliner">a motion reclining chair is a versatile and comfortable piece of furniture that offers various positions for sitting and lounging. Its adjustable features, smooth mechanisms, and many more.</div>
                     <button>view</button>
                 </div>
             </div>
             <div class="col-sm-4">
                 <div class="product-card">
                     <div class="new">NEW</div>
-                    <img src="/images/img-9.png" alt="">
-                    <div class="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga, tempora facere. Laboriosam sed quos maxime delectus totam minus exercitationem quidem hic omnis? Cum animi culpa officiis amet iste repellat a?</div>
+                    <img src="/images/Product of the week/Metallic-Chair-Reclined.jpg" alt="">
+                    <h4>Metallic Reclined</h4>
+                    <div class="description" id="Metallic-Chair-Reclined">Metallic reclining chair is a durable and stylish piece of furniture characterized by its metal frame and modern design. Its adjustable features, smooth mechanisms, and many more.</div><br>
                     <button>view</button>
                 </div>
             </div>
