meshach worked on the view page

--- a/About Us.htm
+++ b/About Us.htm
@@ -10,6 +10,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="About us.css">
     <link rel="stylesheet" href="footer.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
     <nav class="navbar navbar-inverse">
