--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">Products <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="coastalcomfort.html">coastal comfort & Modern Elegance</a></li>
-            <li><a href="#">Rustic Charm & URBAN TREND</a></li>
-            <li><a href="#">Zen Haven</a></li>
+            <li><a href="rusticandurban.html">Rustic Charm & URBAN TREND</a></li>
+            <li><a href="zenhaven.html">Zen Haven</a></li>
           </ul>
         </li>
         <li><a href="About Us.htm">About Us</a></li>
