--- a/rusticandurban.html
+++ b/rusticandurban.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title>RUSTICCHARMIMG</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -85,7 +85,7 @@
                     <div class="new">NEW</div>
                     <img src="/images/img-2.png" alt="">
                     <div class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad soluta assumenda error neque nesciunt aperiam a, harum, minima ea explicabo, hic magni consequatur repellendus! Recusandae sequi tempore a neque expedita!</div>
-               <button><a href="view.html">view</a></button>
+               <button><a href="view.html" class="view" id="table">view</a></button>
                 </div>
             </div>
             <div class="col-sm-4">
@@ -93,7 +93,7 @@
                     <div class="new">NEW</div>
                     <img src="/images/CoasterComfort/lightHousePendantCoasterComfort.jpg" alt="">
                     <div class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, aspernatur! Nostrum, a vel perspiciatis quas quasi, consequuntur assumenda, atque nihil dolor cumque accusamus deserunt cupiditate tempore voluptatibus porro sapiente officia.</div>
-               <button><a href="view.html">view</a></button>
+               <button><a href="view.html" class="view">view</a></button>
                 </div>
             </div>
             <div class="col-sm-4">
@@ -101,7 +101,7 @@
                     <div class="new">NEW</div>
                     <img src="/images/img-9.png" alt="">
                     <div class="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga, tempora facere. Laboriosam sed quos maxime delectus totam minus exercitationem quidem hic omnis? Cum animi culpa officiis amet iste repellat a?</div>
-               <button><a href="view.html">view</a></button>
+               <button><a href="view.html" class="view">view</a></button>
                 </div>
             </div>
         </div>
@@ -131,7 +131,7 @@
                     <div class="new">NEW</div>
                     <img src="/images/img-2.png" alt="">
                     <div class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad soluta assumenda error neque nesciunt aperiam a, harum, minima ea explicabo, hic magni consequatur repellendus! Recusandae sequi tempore a neque expedita!</div>
-               <button><a href="view.html">view</a></button>
+               <button><a href="view.html" class="view">view</a></button>
                 </div>
             </div>
             <div class="col-sm-4">
@@ -139,7 +139,7 @@
                     <div class="new">NEW</div>
                     <img src="/images/CoasterComfort/lightHousePendantCoasterComfort.jpg" alt="">
                     <div class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, aspernatur! Nostrum, a vel perspiciatis quas quasi, consequuntur assumenda, atque nihil dolor cumque accusamus deserunt cupiditate tempore voluptatibus porro sapiente officia.</div>
-               <button><a href="view.html">view</a></button>
+               <button><a href="view.html" class="view">view</a></button>
                 </div>
             </div>
             <div class="col-sm-4">
@@ -147,7 +147,7 @@
                     <div class="new">NEW</div>
                     <img src="/images/img-9.png" alt="">
                     <div class="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga, tempora facere. Laboriosam sed quos maxime delectus totam minus exercitationem quidem hic omnis? Cum animi culpa officiis amet iste repellat a?</div>
-               <button><a href="view.html">view</a></button>
+               <button><a href="view.html" class="view">view</a></button>
                 </div>
             </div>
         </div>
@@ -176,7 +176,7 @@
                     <div class="new">NEW</div>
                     <img src="/images/img-2.png" alt="">
                     <div class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad soluta assumenda error neque nesciunt aperiam a, harum, minima ea explicabo, hic magni consequatur repellendus! Recusandae sequi tempore a neque expedita!</div>
-               <button><a href="view.html">view</a></button>
+               <button><a href="view.html" class="view" >view</a></button>
                 </div>
             </div>
             <div class="col-sm-4">
@@ -184,7 +184,7 @@
                     <div class="new">NEW</div>
                     <img src="/images/CoasterComfort/lightHousePendantCoasterComfort.jpg" alt="">
                     <div class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, aspernatur! Nostrum, a vel perspiciatis quas quasi, consequuntur assumenda, atque nihil dolor cumque accusamus deserunt cupiditate tempore voluptatibus porro sapiente officia.</div>
-               <button><a href="view.html">view</a></button>
+               <button><a href="view.html" class="view">view</a></button>
                 </div>
             </div>
             <div class="col-sm-4">
@@ -192,12 +192,12 @@
                     <div class="new">NEW</div>
                     <img src="/images/img-9.png" alt="">
                     <div class="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga, tempora facere. Laboriosam sed quos maxime delectus totam minus exercitationem quidem hic omnis? Cum animi culpa officiis amet iste repellat a?</div>
-               <button><a href="view.html">view</a></button>
+               <button><a href="view.html" class="view">view</a></button>
                 </div>
             </div>
         </div>
     </div>
-</section>
+   
 
 
 
@@ -338,8 +338,8 @@
   </div>
 </footer>
 
-<script src="/src/js/intersectionobserver.js">
-
-</script>
+<script src="src/js/intersectionobserver.js"></script>
+<script src="src/js/storetheproductselected.js"></script>
+</section>
 </body>
 </html>
