--- a/view.html
+++ b/view.html
@@ -61,8 +61,23 @@
 
 
 <section class="section1">
+   
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-3">
+                <img src="" alt="" class="furnitureImagesLinkedToProductPage" style="width: 100px;">
+                <div class="product-description">
+                   
+                </div>
+            </div>
+            <div class="col-sm-9">
+                <img src="" alt="" class="furnitureImagesLinkedToProductPage" >
+            </div>
+        </div>
+    </div>
 
 </section>
+
 
 
 
@@ -83,6 +98,8 @@
   
 
 </section>
+
+
 
 
 
@@ -201,6 +218,14 @@
       </div>
   </div>
 </footer>
+
+
+
+
+<script src="src/js/productselectview.js"></script>
+
+
+
 
 
 </body>
