--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <div class="about-us-section-container">
              <div class="content">
                 <h1>OUR FURNITURES</h1>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus, deleniti. Totam dicta voluptatum laudantium ex, aliquam illum voluptatibus fugit quae deserunt tempore velit amet officia, eius odio voluptas et eos!</p>
+                <p>Our products are crafted from diverse materials such as wood, metal, plastic, and upholstery, and they come in various styles, from traditional to modern and minimalist to ornate.</p>
                 <button>See more</button>
              </div>
             </div>
@@ -133,12 +133,12 @@
             <div class="col-sm-12">
                 <div class="content-home">
                     <div class="description">
-                        <h1>STYLISH CHAIRS</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos in quasi ipsa dolorum iure unde, ex pariatur odit, id, quisquam aut tempora accusamus mollitia voluptatum ab! Minima distinctio accusantium consequuntur!</p>
+                        <h1>COASTER COMFORT & MODERN ELEGANCE</h1>
+                        <p>COASTER COMFORT & MODERN ELEGANCE is a well-known manufacturer and distributor of a wide range of home furnishings and Decoration. They offer an extensive selection of furniture for living rooms, bedrooms, dining rooms, and more. The Brand is known for providing quality products at affordable prices, making them a popular choice for many consumers</p>
                         <button>see more</button>
                     </div>
 
-                <img src="/images/img-2.png" alt="">
+                <img src="/images/CoasterComfort/E;legantInEbonyStoolCoasterComfort.jpg" height="300rem">
                     
                 </div>
             </div>
@@ -147,10 +147,10 @@
         <div class="row">
           <div class="col-sm-12">
               <div class="content-home">
-                <img src="/images/img-2.png" alt="">
+                <img src="/images/RUSTICCHARMIMG/Saddlebackcounter stoolRUSTICCHARM.jpeg" height="300rem">
                   <div class="description">
-                      <h1>STYLISH CHAIRS</h1>
-                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos in quasi ipsa dolorum iure unde, ex pariatur odit, id, quisquam aut tempora accusamus mollitia voluptatum ab! Minima distinctio accusantium consequuntur!</p>
+                      <h1>RUSTIC CHARMMING & URBAN TREND</h1>
+                      <p>RUSTIC CHARMMING & URBAN TREND brands are companies or manufacturers that specialize in designing, producing, and selling quality and sustainability furniture products. These brands often have their unique style, quality standards, and customer focus. </p>
                       <button>see more</button>
                   </div>
               </div>
@@ -161,8 +161,8 @@
           <div class="col-sm-12">
               <div class="content-home">
                   <div class="description">
-                      <h1>STYLISH CHAIRS</h1>
-                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos in quasi ipsa dolorum iure unde, ex pariatur odit, id, quisquam aut tempora accusamus mollitia voluptatum ab! Minima distinctio accusantium consequuntur!</p>
+                      <h1>ZEN HAVEN</h1>
+                      <p>ZEN HAVEN sustainability and eco-friendliness have become significant considerations in the production of furniture.They specialized making outdoor pieces, children's furniture, and ergonomic office equipment cater to specific needs and environments..</p>
                       <button>see more</button>
                   </div>
                   <img src="/images/img-2.png" alt="">
