edit coater name

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                         <button>see more</button>
                     </div>
 
-                <img src="/images/CoasterComfort/E;legantInEbonyStoolCoasterComfort.jpg" height="300rem">
+                <img src="/images/COASTALCOMFORT/driftwoodCounterstoolCoasterComfort.jpg" height="300rem">
                     
                 </div>
             </div>
