added text file

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="css/hero.css">
   <link rel="stylesheet" href="footerslider.css">
   <link rel="stylesheet" href="footer.css">
-  <link rel="stylesheet" href="About Us.htm">
+  <link rel="stylesheet" href="About Us.css">
 </head>
 <body>
 
@@ -280,7 +280,7 @@
                   <div class="single-cta">
                       <i class="fas fa-map-marker-alt"></i>
                       <div class="cta-text">
-                          <h4>Find us</h4>
+                          <h4> <a href="index.html"><img src="/images/find us.png" height="30px" class="img-fluid" alt="logo"></a>Find us</h4>
                           <span>Akshya Nagar 1st Block 1st Cross, Rammurthy nagar, Bangalore-560016 </span>
                       </div>
                   </div>
@@ -289,7 +289,7 @@
                   <div class="single-cta">
                       <i class="fas fa-phone"></i>
                       <div class="cta-text">
-                          <h4>Call us</h4>
+                          <h4> <a href="index.html"><img src="/images/call-icon.png" class="img-fluid" alt="logo"></a>Call us</h4>
                           <span>+91 1234567890</span>
                       </div>
                   </div>
@@ -298,7 +298,8 @@
                   <div class="single-cta">
                       <i class="far fa-envelope-open"></i>
                       <div class="cta-text">
-                          <h4>Mail us</h4>
+                        
+                          <h4>  <a href="index.html"><img src="/images/mail.png" height="40px" width="40px" class="img-fluid" alt="logo"></a>Mail us</h4>
                           <span>contact@gmail.com</span>
                       </div>
                   </div>
@@ -310,7 +311,7 @@
               <div class="col-xl-4 col-lg-4 mb-50">
                   <div class="footer-widget">
                       <div class="footer-logo">
-                          <a href="index.html"><img src="assets/images/logo.png" class="img-fluid" alt="logo"></a>
+                          <a href="index.html"><img src="/images/logo.png" class="img-fluid" alt="logo"></a>
                       </div>
                       <div class="footer-text">
                           <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
