--- a/Contact us.htm
+++ b/Contact us.htm
@@ -64,8 +64,37 @@
                   <button class="btn btn-primary">Send Now</button>
                 </div>
               </form>
-
             </div>
+            <div class="col-md-6">
+              <img src="images/furniture.jpg" class="img-fluid">
+            </div>
+          </div>
+
+          <div class="last_row"> 
+            <div class="col-12 col-lg-6">
+                  <div class="row">
+                    <div class="col-sm-4">
+                      <div class="box">
+                        <h4 class="call">EMAIL</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, sapiente!</p>
+                      </div>
+                    </div>
+                    <div class="col-sm-4">
+                      <div class="box">
+                        <h4 class="call">LOCATION</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, sapiente!</p>
+                      </div>
+                    </div>
+                    <div class="col-sm-4">
+                      <div class="box">
+                        <h4 class="call">CALL US</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, sapiente!</p>
+                      </div>
+                    </div>
+                  </div>
+                
+              
+                    </div>
           </div>
         </div>
       </section>
