worked on the view pages

--- a/coastalcomfort.html
+++ b/coastalcomfort.html
@@ -11,8 +11,8 @@
 
   <link rel="stylesheet" href="css/index.css">
   <link rel="stylesheet" href="css/hero.css">
-  <link rel="stylesheet" href="footerslider.css">
-  <link rel="stylesheet" href="footer.css">
+  <link rel="stylesheet" href="css/footerslider.css">
+  <link rel="stylesheet" href="css/footer.css">
 </head>
 <body>
 
@@ -28,8 +28,8 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="index.html">Home</a></li>
-        <li class="dropdown">
+        <li><a href="index.html">Home</a></li>
+        <li class="dropdown active">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">Products <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="coastalcomfort.html">coastal comfort & Modern Elegance</a></li>
@@ -83,25 +83,25 @@
             <div class="col-sm-4">
                 <div class="product-card">
                     <div class="new">NEW</div>
-                    <img src="/images/img-2.png" alt="">
+                    <img src="/images/COASTALCOMFORT/capeCodDiningSetCoasterComfort.jpg" alt="" >
                     <div class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad soluta assumenda error neque nesciunt aperiam a, harum, minima ea explicabo, hic magni consequatur repellendus! Recusandae sequi tempore a neque expedita!</div>
-               <button><a href="view.html">view</a></button>
+               <button><a href="view.html" class="view" id="capeCodDiningSetCoasterComfort">view</a></button>
                 </div>
             </div>
             <div class="col-sm-4">
                 <div class="product-card">
                     <div class="new">NEW</div>
-                    <img src="/images/CoasterComfort/lightHousePendantCoasterComfort.jpg" alt="">
+                    <img src="/images/COASTALCOMFORT/lightHousePendantCoasterComfort.jpg" alt="" >
                     <div class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, aspernatur! Nostrum, a vel perspiciatis quas quasi, consequuntur assumenda, atque nihil dolor cumque accusamus deserunt cupiditate tempore voluptatibus porro sapiente officia.</div>
-               <button><a href="view.html">view</a></button>
+               <button><a href="view.html" class="view" id="lightHousePendantCoasterComfort">view</a></button>
                 </div>
             </div>
             <div class="col-sm-4">
                 <div class="product-card">
                     <div class="new">NEW</div>
-                    <img src="/images/img-9.png" alt="">
+                    <img src="/images/COASTALCOMFORT/driftwoodCounterstoolCoasterComfort.jpg" alt="" style="width: 150px;">
                     <div class="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga, tempora facere. Laboriosam sed quos maxime delectus totam minus exercitationem quidem hic omnis? Cum animi culpa officiis amet iste repellat a?</div>
-               <button><a href="view.html">view</a></button>
+               <button><a href="view.html" class="view" id="driftwoodCounterstoolCoasterComfort"  >view</a></button>
                 </div>
             </div>
         </div>
@@ -129,25 +129,25 @@
             <div class="col-sm-4">
                 <div class="product-card">
                     <div class="new">NEW</div>
-                    <img src="/images/img-2.png" alt="">
+                    <img src="/images/COASTALCOMFORT/crystalCascadechandelierCoasterComfort.jpg" alt=""  style="width: 150px;">
                     <div class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad soluta assumenda error neque nesciunt aperiam a, harum, minima ea explicabo, hic magni consequatur repellendus! Recusandae sequi tempore a neque expedita!</div>
-               <button><a href="view.html">view</a></button>
+               <button><a href="view.html" class="view" id="crystalCascadechandelierCoasterComfort">view</a></button>
                 </div>
             </div>
             <div class="col-sm-4">
                 <div class="product-card">
                     <div class="new">NEW</div>
-                    <img src="/images/CoasterComfort/lightHousePendantCoasterComfort.jpg" alt="">
+                    <img src="/images/COASTALCOMFORT/ElegantInEbonyStoolCoasterComfort.jpg" alt="" width="150px">
                     <div class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, aspernatur! Nostrum, a vel perspiciatis quas quasi, consequuntur assumenda, atque nihil dolor cumque accusamus deserunt cupiditate tempore voluptatibus porro sapiente officia.</div>
-               <button><a href="view.html">view</a></button>
+               <button><a href="view.html" class="view" id="ElegantInEbonyStoolCoasterComfort">view</a></button>
                 </div>
             </div>
             <div class="col-sm-4">
                 <div class="product-card">
                     <div class="new">NEW</div>
-                    <img src="/images/img-9.png" alt="">
+                    <img src="/images/COASTALCOMFORT/nauticalCanopyBedCoasterComfort.jpg" alt=""  style="width: 150px;">
                     <div class="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga, tempora facere. Laboriosam sed quos maxime delectus totam minus exercitationem quidem hic omnis? Cum animi culpa officiis amet iste repellat a?</div>
-               <button><a href="view.html">view</a></button>
+               <button><a href="view.html" class="view" id="nauticalCanopyBedCoasterComfort">view</a></button>
                 </div>
             </div>
         </div>
@@ -174,17 +174,17 @@
             <div class="col-sm-4">
                 <div class="product-card">
                     <div class="new">NEW</div>
-                    <img src="/images/img-2.png" alt="">
+                    <img src="/images/COASTALCOMFORT/seashellrockingChairCoasterComfort.jpg" alt="">
                     <div class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad soluta assumenda error neque nesciunt aperiam a, harum, minima ea explicabo, hic magni consequatur repellendus! Recusandae sequi tempore a neque expedita!</div>
-               <button><a href="view.html">view</a></button>
+               <button><a href="view.html" class="view" id="seashellrockingChairCoasterComfort">view</a></button>
                 </div>
             </div>
             <div class="col-sm-4">
                 <div class="product-card">
                     <div class="new">NEW</div>
-                    <img src="/images/CoasterComfort/lightHousePendantCoasterComfort.jpg" alt="">
+                    <img src="/images/COASTALCOMFORT/lightHousePendantCoasterComfort.jpg" alt="">
                     <div class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, aspernatur! Nostrum, a vel perspiciatis quas quasi, consequuntur assumenda, atque nihil dolor cumque accusamus deserunt cupiditate tempore voluptatibus porro sapiente officia.</div>
-               <button><a href="view.html">view</a></button>
+               <button><a href="view.html" class="view" id="lightHousePendantCoasterComfort">view</a></button>
                 </div>
             </div>
             <div class="col-sm-4">
@@ -192,7 +192,7 @@
                     <div class="new">NEW</div>
                     <img src="/images/img-9.png" alt="">
                     <div class="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga, tempora facere. Laboriosam sed quos maxime delectus totam minus exercitationem quidem hic omnis? Cum animi culpa officiis amet iste repellat a?</div>
-               <button><a href="view.html">view</a></button>
+               <button><a href="view.html" class="view">view</a></button>
                 </div>
             </div>
         </div>
@@ -338,8 +338,7 @@
   </div>
 </footer>
 
-<script src="/src/js/intersectionobserver.js">
-
-</script>
+<script src="/src/js/intersectionobserver.js"></script>
+<script src="/src/js/storetheproductselected.js"></script>
 </body>
 </html>
