--- a/view.html
+++ b/view.html
@@ -10,8 +10,8 @@
 
   <link rel="stylesheet" href="css/index.css">
   <link rel="stylesheet" href="css/hero.css">
-  <link rel="stylesheet" href="footerslider.css">
-  <link rel="stylesheet" href="footer.css">
+  <link rel="stylesheet" href="css/footerslider.css">
+  <link rel="stylesheet" href="css/footer.css">
 </head>
 <body>
 
@@ -27,8 +27,8 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="index.html">Home</a></li>
-        <li class="dropdown">
+        <li><a href="index.html">Home</a></li>
+        <li class="dropdown active">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">Products <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="coastalcomfort.html">coastal comfort & Modern Elegance</a></li>
@@ -36,7 +36,7 @@
             <li><a href="zenhaven.html">Zen Haven</a></li>
           </ul>
         </li>
-        <li><a href="#">About Us</a></li>
+        <li><a href="About Us.htm">About Us</a></li>
         <li><a href="#">Contact Us</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
