--- a/About Us.htm
+++ b/About Us.htm
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="css/animate.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="About us.css">
-    <link rel="stylesheet" href="footer.css">
+    <link rel="stylesheet" href="css/About us.css">
+    <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
@@ -25,7 +25,7 @@
           </div>
           <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
-              <li class="active"><a href="index.html">Home</a></li>
+              <li ><a href="index.html">Home</a></li>
               <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">Products <span class="caret"></span></a>
                 <ul class="dropdown-menu">
@@ -34,7 +34,7 @@
                   <li><a href="zenhaven.html">Zen Haven</a></li>
                 </ul>
               </li>
-              <li><a href="About Us.htm">About Us</a></li>
+              <li class="active"><a href="About Us.htm">About Us</a></li>
               <li><a href="#">Contact Us</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
