--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 
   <link rel="stylesheet" href="css/index.css">
   <link rel="stylesheet" href="css/hero.css">
-  <link rel="stylesheet" href="footerslider.css">
-  <link rel="stylesheet" href="footer.css">
+  <link rel="stylesheet" href="css/footerslider.css">
+  <link rel="stylesheet" href="css/footer.css">
   <link rel="stylesheet" href="About Us.htm">
+ 
 </head>
 <body>
 
