--- a/rusticandurban.html
+++ b/rusticandurban.html
@@ -11,8 +11,8 @@
 
   <link rel="stylesheet" href="css/index.css">
   <link rel="stylesheet" href="css/hero.css">
-  <link rel="stylesheet" href="footerslider.css">
-  <link rel="stylesheet" href="footer.css">
+  <link rel="stylesheet" href="css/footerslider.css">
+  <link rel="stylesheet" href="css/footer.css">
 </head>
 <body>
 
@@ -28,8 +28,8 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="index.html">Home</a></li>
-        <li class="dropdown">
+        <li><a href="index.html">Home</a></li>
+        <li class="dropdown active">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">Products <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="coastalcomfort.html">coastal comfort & Modern Elegance</a></li>
@@ -83,25 +83,25 @@
             <div class="col-sm-4">
                 <div class="product-card">
                     <div class="new">NEW</div>
-                    <img src="/images/img-2.png" alt="">
+                    <img src="/images/RUSTICCHARMIMG/farmHouseTres.jpg" alt="">
                     <div class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad soluta assumenda error neque nesciunt aperiam a, harum, minima ea explicabo, hic magni consequatur repellendus! Recusandae sequi tempore a neque expedita!</div>
-               <button><a href="view.html" class="view" id="table">view</a></button>
+               <button><a href="view.html" class="view" id="farmHouseTres">view</a></button>
                 </div>
             </div>
             <div class="col-sm-4">
                 <div class="product-card">
                     <div class="new">NEW</div>
-                    <img src="/images/CoasterComfort/lightHousePendantCoasterComfort.jpg" alt="">
+                    <img src="/images/RUSTICCHARMIMG/FusionPedantRusticCharm.jpg" alt="">
                     <div class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, aspernatur! Nostrum, a vel perspiciatis quas quasi, consequuntur assumenda, atque nihil dolor cumque accusamus deserunt cupiditate tempore voluptatibus porro sapiente officia.</div>
-               <button><a href="view.html" class="view">view</a></button>
+               <button><a href="view.html" class="view" id="FusionPedantRusticCharm">view</a></button>
                 </div>
             </div>
             <div class="col-sm-4">
                 <div class="product-card">
                     <div class="new">NEW</div>
-                    <img src="/images/img-9.png" alt="">
+                    <img src="/images/RUSTICCHARMIMG/hearthsaideArmchairRusticCharm.jpg">
                     <div class="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga, tempora facere. Laboriosam sed quos maxime delectus totam minus exercitationem quidem hic omnis? Cum animi culpa officiis amet iste repellat a?</div>
-               <button><a href="view.html" class="view">view</a></button>
+               <button><a href="view.html" class="view" id="hearthsaideArmchairRusticCharm">view</a></button>
                 </div>
             </div>
         </div>
@@ -129,25 +129,25 @@
             <div class="col-sm-4">
                 <div class="product-card">
                     <div class="new">NEW</div>
-                    <img src="/images/img-2.png" alt="">
+                    <img src="/images/RUSTICCHARMIMG/LanternChandelierRusticCharm.jpg" alt="">
                     <div class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad soluta assumenda error neque nesciunt aperiam a, harum, minima ea explicabo, hic magni consequatur repellendus! Recusandae sequi tempore a neque expedita!</div>
-               <button><a href="view.html" class="view">view</a></button>
+               <button><a href="view.html" class="view" id="LanternChandelierRusticCharm">view</a></button>
                 </div>
             </div>
             <div class="col-sm-4">
                 <div class="product-card">
                     <div class="new">NEW</div>
-                    <img src="/images/CoasterComfort/lightHousePendantCoasterComfort.jpg" alt="">
+                    <img src="/images/RUSTICCHARMIMG/SaddlebackcounterstoolRUSTICCHARM.jpg" alt="">
                     <div class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, aspernatur! Nostrum, a vel perspiciatis quas quasi, consequuntur assumenda, atque nihil dolor cumque accusamus deserunt cupiditate tempore voluptatibus porro sapiente officia.</div>
-               <button><a href="view.html" class="view">view</a></button>
+               <button><a href="view.html" class="view" id="SaddlebackcounterstoolRUSTICCHARM">view</a></button>
                 </div>
             </div>
             <div class="col-sm-4">
                 <div class="product-card">
                     <div class="new">NEW</div>
-                    <img src="/images/img-9.png" alt="">
+                    <img src="/images/RUSTICCHARMIMG/table.jpg" alt="">
                     <div class="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga, tempora facere. Laboriosam sed quos maxime delectus totam minus exercitationem quidem hic omnis? Cum animi culpa officiis amet iste repellat a?</div>
-               <button><a href="view.html" class="view">view</a></button>
+               <button><a href="view.html" class="view" id="table">view</a></button>
                 </div>
             </div>
         </div>
@@ -174,15 +174,15 @@
             <div class="col-sm-4">
                 <div class="product-card">
                     <div class="new">NEW</div>
-                    <img src="/images/img-2.png" alt="">
+                    <img src="/images/RUSTICCHARMIMG/HeritagecanopybedRUSTICCHARM.jpg" alt="" style="width: 150px;">
                     <div class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad soluta assumenda error neque nesciunt aperiam a, harum, minima ea explicabo, hic magni consequatur repellendus! Recusandae sequi tempore a neque expedita!</div>
-               <button><a href="view.html" class="view" >view</a></button>
+               <button><a href="view.html" class="view" id="HeritagecanopybedRUSTICCHARM" >view</a></button>
                 </div>
             </div>
             <div class="col-sm-4">
                 <div class="product-card">
                     <div class="new">NEW</div>
-                    <img src="/images/CoasterComfort/lightHousePendantCoasterComfort.jpg" alt="">
+                    <img src="/images/COASTALCOMFORT/lightHousePendantCoasterComfort.jpg" alt="">
                     <div class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, aspernatur! Nostrum, a vel perspiciatis quas quasi, consequuntur assumenda, atque nihil dolor cumque accusamus deserunt cupiditate tempore voluptatibus porro sapiente officia.</div>
                <button><a href="view.html" class="view">view</a></button>
                 </div>
