--- a/zenhaven.html
+++ b/zenhaven.html
@@ -11,8 +11,8 @@
 
   <link rel="stylesheet" href="css/index.css">
   <link rel="stylesheet" href="css/hero.css">
-  <link rel="stylesheet" href="footerslider.css">
-  <link rel="stylesheet" href="footer.css">
+  <link rel="stylesheet" href="css/footerslider.css">
+  <link rel="stylesheet" href="css/footer.css">
 </head>
 <body>
 
@@ -28,8 +28,8 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="index.html">Home</a></li>
-        <li class="dropdown">
+        <li><a href="index.html">Home</a></li>
+        <li class="dropdown active">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">Products <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="coastalcomfort.html">coastal comfort & Modern Elegance</a></li>
@@ -91,7 +91,7 @@
             <div class="col-sm-4">
                 <div class="product-card">
                     <div class="new">NEW</div>
-                    <img src="/images/CoasterComfort/lightHousePendantCoasterComfort.jpg" alt="">
+                    <img src="/images/COASTALCOMFORT/lightHousePendantCoasterComfort.jpg" alt="">
                     <div class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, aspernatur! Nostrum, a vel perspiciatis quas quasi, consequuntur assumenda, atque nihil dolor cumque accusamus deserunt cupiditate tempore voluptatibus porro sapiente officia.</div>
                <button><a href="view.html">view</a></button>
                 </div>
@@ -137,7 +137,7 @@
             <div class="col-sm-4">
                 <div class="product-card">
                     <div class="new">NEW</div>
-                    <img src="/images/CoasterComfort/lightHousePendantCoasterComfort.jpg" alt="">
+                    <img src="/images/COASTALCOMFORT/lightHousePendantCoasterComfort.jpg" alt="">
                     <div class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, aspernatur! Nostrum, a vel perspiciatis quas quasi, consequuntur assumenda, atque nihil dolor cumque accusamus deserunt cupiditate tempore voluptatibus porro sapiente officia.</div>
                <button><a href="view.html">view</a></button>
                 </div>
@@ -182,7 +182,7 @@
             <div class="col-sm-4">
                 <div class="product-card">
                     <div class="new">NEW</div>
-                    <img src="/images/CoasterComfort/lightHousePendantCoasterComfort.jpg" alt="">
+                    <img src="/images/COASTALCOMFORT/lightHousePendantCoasterComfort.jpg" alt="">
                     <div class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, aspernatur! Nostrum, a vel perspiciatis quas quasi, consequuntur assumenda, atque nihil dolor cumque accusamus deserunt cupiditate tempore voluptatibus porro sapiente officia.</div>
                <button><a href="view.html">view</a></button>
                 </div>
