added contact us

--- a/About Us.htm
+++ b/About Us.htm
@@ -45,6 +45,8 @@
         </div>
       </nav>
 
+
+      <!-- ABOUT US SECTION -->
       
        <div class="center-image bg-dark">
         <div class="about-us-section bg-light">
