--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="footerslider.css">
   <link rel="stylesheet" href="footer.css">
   <link rel="stylesheet" href="About Us.css">
+  <link rel="stylesheet" href="contact us.css">
 </head>
 <body>
 
@@ -38,7 +39,7 @@
           </ul>
         </li>
         <li><a href="About Us.htm">About Us</a></li>
-        <li><a href="#">Contact Us</a></li>
+        <li><a href="Contact us.htm">Contact Us</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#"><span class="glyphicon glyphicon-user"></span>wishlist</a></li>
