--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
   <link rel="stylesheet" href="css/index.css">
   <link rel="stylesheet" href="css/hero.css">
-  <link rel="stylesheet" href="footerslider.css">
-  <link rel="stylesheet" href="footer.css">
+  <link rel="stylesheet" href="css/footerslider.css">
+  <link rel="stylesheet" href="css/footer.css">
   <link rel="stylesheet" href="About Us.htm">
 </head>
 <body>
@@ -38,7 +38,7 @@
           </ul>
         </li>
         <li><a href="About Us.htm">About Us</a></li>
-        <li><a href="#">Contact Us</a></li>
+        <li><a href="Contact us.htm">Contact Us</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#"><span class="glyphicon glyphicon-user"></span>wishlist</a></li>
