--- a/view.html
+++ b/view.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="css/hero.css">
   <link rel="stylesheet" href="css/footerslider.css">
   <link rel="stylesheet" href="css/footer.css">
+  <link rel="stylesheet" href="css/animate.css">
 </head>
 <body>
 
@@ -60,18 +61,28 @@
 
 
 
-<section class="section1">
+<section class="section">
    
     <div class="container">
+        <div class="row"><div class="col-sm-8">
+            <h1 class="heading"></h1>
+        </div></div>
         <div class="row">
-            <div class="col-sm-3">
+            <div class="col-sm-2">
                 <img src="" alt="" class="furnitureImagesLinkedToProductPage" style="width: 100px;">
+               
+            </div>
+            <div class="col-sm-7">
+                <img src="" alt="" class="furnitureImagesLinkedToProductPage">
+                <button style="background-color: black; color: white; margin-top: 1rem;"><a href="Contact us.htm" style="color: white;">MAKE AN ORDER</a></button>
+
+            </div>
+
+            <div class="col-sm-3">
                 <div class="product-description">
                    
                 </div>
-            </div>
-            <div class="col-sm-9">
-                <img src="" alt="" class="furnitureImagesLinkedToProductPage" >
+                <button class="btn animate__animated animate__shakeX" style="background-color: black; color: white; margin-top: 1rem;" id="download-description-button"><a href="" style="color: white;">GET A COPY OF THE PRODUCT DETAILS </a></button>
             </div>
         </div>
     </div>
@@ -223,6 +234,7 @@
 
 
 <script src="src/js/productselectview.js"></script>
+
 
 
 
