--- a/coastalcomfort.html
+++ b/coastalcomfort.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="css/hero.css">
   <link rel="stylesheet" href="css/footerslider.css">
   <link rel="stylesheet" href="css/footer.css">
+  <link rel="stylesheet" href="css/product.css">
 </head>
 <body>
 
@@ -59,22 +60,20 @@
     </div>
 </section>
 
-<section class="section1">
+<section class="section">
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
                 <h1 class="product-of-the-week">
-                    PRODUCT OF THE WEEK
+                    Introducing Coastal Comfort: Your Seaside Sanctuary
                 </h1>
             </div>
         </div>
         <div class="row">
             <div class="col-sm-12">
-                <p class="product-of-the-week-caption">"Introducing our Furniture Favorites of the Week! Discover
-                     stunning pieces that will transform your home's ambiance. <br>
-                     From timeless classics to contemporary marvels, we've curated
-                     the best for you. <br>Elevate your living space with this week's 
-                     must-haves!"</p>
+                <p class="product-of-the-week-caption">
+                    "We are delighted to present Coastal Comfort as a distinguished addition to our renowned furniture company. Coastal Comfort encapsulates the very spirit of coastal living, infusing the tranquil and rejuvenating ambiance of the seaside directly into your home.
+                    Throughout our history at [Your Furniture Company's Name], we have steadfastly dedicated ourselves to delivering furniture that not only satisfies practical requirements but also harmonizes seamlessly with our customers' individual lifestyles. Coastal Comfort stands as a testament to this unwavering dedication. Let us illustrate why Coastal Comfort emerges as a refreshing breeze amidst our array of fine furnishings:"</p>
             </div>
             
         </div>
@@ -82,25 +81,34 @@
         <div class="row">
             <div class="col-sm-4">
                 <div class="product-card">
-                    <div class="new">NEW</div>
+                    <div class="new">PRODUCT: Cape Cod Dining Set</div>
                     <img src="/images/COASTALCOMFORT/capeCodDiningSetCoasterComfort.jpg" alt="" >
-                    <div class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad soluta assumenda error neque nesciunt aperiam a, harum, minima ea explicabo, hic magni consequatur repellendus! Recusandae sequi tempore a neque expedita!</div>
+                    <div class="description">Shop: Coastal Haven
+                        Price: $1,499
+                        Details: The Cape Cod Dining Set features a distressed white table with a plank-style top and six woven seagrass chairs. 
+                        Its relaxed, beachy vibe is perfect for coastal dining.</div>
                <button><a href="view.html" class="view" id="capeCodDiningSetCoasterComfort">view</a></button>
                 </div>
             </div>
             <div class="col-sm-4">
                 <div class="product-card">
-                    <div class="new">NEW</div>
+                    <div class="new">PRODUCT: Lighthouse Pendant Light</div>
                     <img src="/images/COASTALCOMFORT/lightHousePendantCoasterComfort.jpg" alt="" >
-                    <div class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, aspernatur! Nostrum, a vel perspiciatis quas quasi, consequuntur assumenda, atque nihil dolor cumque accusamus deserunt cupiditate tempore voluptatibus porro sapiente officia.</div>
+                    <div class="description">Shop: Coastal Illuminations
+                        Price: $379
+                        Details: The Lighthouse Pendant Light features a frosted glass shade and a twisted nautical rope suspension. 
+                        Its soft, diffused light adds a touch of seaside charm to any room.</div>
                <button><a href="view.html" class="view" id="lightHousePendantCoasterComfort">view</a></button>
                 </div>
             </div>
             <div class="col-sm-4">
                 <div class="product-card">
-                    <div class="new">NEW</div>
+                    <div class="new">PRODUCT: Driftwood Counter Stool</div>
                     <img src="/images/COASTALCOMFORT/driftwoodCounterstoolCoasterComfort.jpg" alt="" style="width: 150px;">
-                    <div class="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga, tempora facere. Laboriosam sed quos maxime delectus totam minus exercitationem quidem hic omnis? Cum animi culpa officiis amet iste repellat a?</div>
+                    <div class="description">Shop: Shoreline Furnishings
+                        Price: $199
+                        Details: The Driftwood Counter Stool is crafted from reclaimed driftwood with a woven sea grass seat. 
+                        Its weathered beauty and casual elegance make it a coastal classic.</div>
                <button><a href="view.html" class="view" id="driftwoodCounterstoolCoasterComfort"  >view</a></button>
                 </div>
             </div>
@@ -109,7 +117,7 @@
 </section>
 
 
-<section class="section1">
+<section class="section">
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
@@ -128,25 +136,33 @@
         <div class="row">
             <div class="col-sm-4">
                 <div class="product-card">
-                    <div class="new">NEW</div>
+                    <div class="new">PRODUCT: Crystal Cascade Chandelier</div>
                     <img src="/images/COASTALCOMFORT/crystalCascadechandelierCoasterComfort.jpg" alt=""  style="width: 150px;">
-                    <div class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad soluta assumenda error neque nesciunt aperiam a, harum, minima ea explicabo, hic magni consequatur repellendus! Recusandae sequi tempore a neque expedita!</div>
+                    <div class="description">Shop: LuxeLiving Showroom, Fifth Avenue, NYC
+                        Price: $5,500
+                        Details: The Crystal Cascade Chandelier is a grand, cascading fixture with countless hand-cut crystals,
+                         creating a dazzling play of light and shadow.</div>
                <button><a href="view.html" class="view" id="crystalCascadechandelierCoasterComfort">view</a></button>
                 </div>
             </div>
             <div class="col-sm-4">
                 <div class="product-card">
-                    <div class="new">NEW</div>
+                    <div class="new">PRODUCT: Elegance in Ebony</div>
                     <img src="/images/COASTALCOMFORT/ElegantInEbonyStoolCoasterComfort.jpg" alt="" width="150px">
-                    <div class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, aspernatur! Nostrum, a vel perspiciatis quas quasi, consequuntur assumenda, atque nihil dolor cumque accusamus deserunt cupiditate tempore voluptatibus porro sapiente officia.</div>
+                    <div class="description">Shop: LuxeLiving Showroom, Fifth Avenue, NYC
+                        Price: $1,200
+                        Details: Elegance in Ebony is a sleek, backless bar stool featuring a polished ebony wood seat and a stainless steel base with a footrest..</div>
                <button><a href="view.html" class="view" id="ElegantInEbonyStoolCoasterComfort">view</a></button>
                 </div>
             </div>
             <div class="col-sm-4">
                 <div class="product-card">
-                    <div class="new">NEW</div>
+                    <div class="new">PRODUCT: Nautical Canopy Bed</div>
                     <img src="/images/COASTALCOMFORT/nauticalCanopyBedCoasterComfort.jpg" alt=""  style="width: 150px;">
-                    <div class="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga, tempora facere. Laboriosam sed quos maxime delectus totam minus exercitationem quidem hic omnis? Cum animi culpa officiis amet iste repellat a?</div>
+                    <div class="description">Shop: Coastal Retreat
+                        Price: $1,399
+                        Details: The Nautical Canopy Bed features a distressed white finish and rope detailing, evoking a sense of maritime charm. 
+                        It's a perfect centerpiece for a beach-themed bedroom.</div>
                <button><a href="view.html" class="view" id="nauticalCanopyBedCoasterComfort">view</a></button>
                 </div>
             </div>
@@ -154,7 +170,7 @@
     </div>
 </section>
 
-<section class="section1">
+<section class="section">
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
@@ -173,28 +189,16 @@
         <div class="row">
             <div class="col-sm-4">
                 <div class="product-card">
-                    <div class="new">NEW</div>
+                    <div class="new">PRODUCT: Seashell Rocking Chair</div>
                     <img src="/images/COASTALCOMFORT/seashellrockingChairCoasterComfort.jpg" alt="">
-                    <div class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad soluta assumenda error neque nesciunt aperiam a, harum, minima ea explicabo, hic magni consequatur repellendus! Recusandae sequi tempore a neque expedita!</div>
+                    <div class="description">Shop: Beach House Treasures
+                        Price: $749
+                        Details: The Seashell Rocking Chair is crafted from whitewashed oak, with a woven rattan seat and backrest. 
+                        Its gentle rocking motion and coastal-inspired design create a serene retreat.</div>
                <button><a href="view.html" class="view" id="seashellrockingChairCoasterComfort">view</a></button>
                 </div>
             </div>
-            <div class="col-sm-4">
-                <div class="product-card">
-                    <div class="new">NEW</div>
-                    <img src="/images/COASTALCOMFORT/lightHousePendantCoasterComfort.jpg" alt="">
-                    <div class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, aspernatur! Nostrum, a vel perspiciatis quas quasi, consequuntur assumenda, atque nihil dolor cumque accusamus deserunt cupiditate tempore voluptatibus porro sapiente officia.</div>
-               <button><a href="view.html" class="view" id="lightHousePendantCoasterComfort">view</a></button>
-                </div>
-            </div>
-            <div class="col-sm-4">
-                <div class="product-card">
-                    <div class="new">NEW</div>
-                    <img src="/images/img-9.png" alt="">
-                    <div class="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga, tempora facere. Laboriosam sed quos maxime delectus totam minus exercitationem quidem hic omnis? Cum animi culpa officiis amet iste repellat a?</div>
-               <button><a href="view.html" class="view">view</a></button>
-                </div>
-            </div>
+            
         </div>
     </div>
 </section>
