--- a/rusticandurban.html
+++ b/rusticandurban.html
@@ -13,9 +13,12 @@
   <link rel="stylesheet" href="css/hero.css">
   <link rel="stylesheet" href="css/footerslider.css">
   <link rel="stylesheet" href="css/footer.css">
+  <link rel="stylesheet" href="css/product.css">
 </head>
 <body>
 
+
+<!-- navigation menu -->
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
@@ -47,7 +50,9 @@
     </div>
   </div>
 </nav>
-  
+ 
+
+<!-- hero/banner section -->
 <section class="hero">
     <div class="slide-show-container">
       <div class="wrapper-one">
@@ -59,7 +64,9 @@
     </div>
 </section>
 
-<section class="section1">
+
+<!-- section that contains a row of products -->
+<section class="section">
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
@@ -108,8 +115,8 @@
     </div>
 </section>
 
-
-<section class="section1">
+<!-- section that contains a row of products -->
+<section class="section">
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
@@ -154,7 +161,9 @@
     </div>
 </section>
 
-<section class="section1">
+
+<!-- section that contains a row of products -->
+<section class="section">
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
@@ -205,7 +214,7 @@
 
 
 
-
+<!-- footer animation slider -->
 <section class="section7">
 
         <div class="pic-ctn">
@@ -222,7 +231,7 @@
 
 
 
-
+<!-- foooter section -->
 <footer class="footer-section">
   <div class="container">
       <div class="footer-cta pt-5 ">
