--- a/Contact us.htm
+++ b/Contact us.htm
@@ -55,17 +55,17 @@
               <h1 class="text-center mt-3">Contact information</h1>
               <form class="p-4 mt-5">
                 <div class="mail mb-3">
-                  <a href="tel:+2348135348156">08135348156</a>
+                  <a href="tel:+2348135348156"><img src="images/caller.png">08135348156</a>
                   <!-- <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com"> -->
                 </div>
                 <div class="mb-3">
-                  <a href="mailto:notageorge2@gmail.com">notageorge2@gmail.com</a>
+                  <a href="mailto:notageorge2@gmail.com"><img src="images/mail.png">notageorge2@gmail.com</a>
                   <!-- <label for="exampleFormControlInput1" class="form-label">Email ID</label>
                   <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com"> -->
                 </div>
                 <div class="mb-3">
                   <address class="add">
-                    <a href="https://maps.app.goo.gl/4e1QyWYzHd7TRk5MA">1 esther street lagos main land</a>
+                    <a href="https://maps.app.goo.gl/4e1QyWYzHd7TRk5MA"><img src="images/find us.png">1 esther street lagos main land</a>
                   </address>
                  
                   <!-- <label for="exampleFormControlTextarea1" class="form-label">Enter any messeage</label>
@@ -77,7 +77,7 @@
               </form>
             </div>
            <div class="col-md-6">
-            <img src="images/furniture.jpg">
+            <img class="img-fluid" src="images/furniture.jpg">
            </div>
           </div>
 
