--- a/About Us.htm
+++ b/About Us.htm
@@ -35,7 +35,7 @@
                 </ul>
               </li>
               <li><a href="About Us.htm">About Us</a></li>
-              <li><a href="#">Contact Us</a></li>
+              <li><a href="Contact us.htm">Contact Us</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
               <li><a href="#"><span class="glyphicon glyphicon-user"></span>wishlist</a></li>
