--- a/Contact us.htm
+++ b/Contact us.htm
@@ -59,13 +59,13 @@
                   <!-- <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com"> -->
                 </div>
                 <div class="mb-3">
-                  <a href="mailto:notageorge2@gmail.com"><img src="images/mail.png">notageorge2@gmail.com</a>
+                  <a href="mailto:notageorge2@gmail.com"><img src="images/icon-image.png">notageorge2@gmail.com</a>
                   <!-- <label for="exampleFormControlInput1" class="form-label">Email ID</label>
                   <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com"> -->
                 </div>
                 <div class="mb-3">
                   <address class="add">
-                    <a href="https://maps.app.goo.gl/4e1QyWYzHd7TRk5MA"><img src="images/find us.png">1 esther street lagos main land</a>
+                    <a href="https://maps.app.goo.gl/4e1QyWYzHd7TRk5MA"><img src="images/icons8-location-24.png">1 esther street lagos main land</a>
                   </address>
                  
                   <!-- <label for="exampleFormControlTextarea1" class="form-label">Enter any messeage</label>
